# idp_rl

./: .gitignore  README.md  pyproject.toml
case_studies/: eval.py  eval_11_alkane.py  eval_22_alkane.py  eval_alkane_obabel.py  eval_alkane_rdkit.py  eval_lignin.py  eval_lignin_obabel.py  eval_t_chain.py  generate_branched_alkanes.py  generate_lignin.py  generate_t_chain.py  train_alkane.py  train_lignin.py  train_t_chain.py
case_studies/configs/: eval_alkane_11.json  eval_alkane_22.json  eval_lignin.json
examples/: charmm_chignolin.ipynb  chig_exp_charmm.ipynb  chignolin.ipynb  chignolin.py  chignolin_analysis.ipynb  chignolin_curriculum.py  chignolin_data.pickle  comparison.ipynb  curriculum_example.py  example1.py  example2.py  example_analysis.ipynb  ramachandran.ipynb  ramachandran_charmm.ipynb  ramachandran_chig.ipynb  reformat_pdb.ipynb  rl_baseline.ipynb  test_example.py
examples/chignolin/: charmm_chignolin.ipynb  init.psf  simulation.py
examples/custom_env_advanced/: custom_env.py
examples/custom_env_basic/: custom_env.py  run.py
examples/energy/: 1uao.psf  charmm_chignolin.ipynb  charmm_rdkit.py  test_charmm.py
idp_rl/agents/: base_ac_agent.py  base_ac_agent_recurrent.py  base_agent.py  base_agent_recurrent.py  curriculum_agents.py
idp_rl/analysis/: analysis.py
idp_rl/config/: agent_config.py  mol_config.py
idp_rl/environments/: __init__.py  conformer_env.py  curriculum_conformer_env.py  environment_wrapper.py  environments.py  graphenvironments.py
idp_rl/logging/: env_logger.py  train_logger.py
tests/: __init__.py
(+54 files in other folders)
