[tool.poetry]
name = "idp_rl"
version = "1.0.0"
description = "RL for IDP conformer generation"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "^1.22.4"
mdtraj = "^1.9.7"
deepchem = "^2.6.1"
tqdm = "^4.64.0"
gym = "^0.24.0"
torch = "^1.11.0"
torch-geometric = "^2.0.4"
torch-sparse = "^0.6.13"
torch-scatter = "^2.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
